--- a/Sample_universe.html
+++ b/Sample_universe.html
@@ -33,7 +33,7 @@
   <header>
     <div class="container">
       <div class="container-small">
-      <a href="" class="headA">Sample</a>
+      <a href="#" class="headA">Sample</a>
 
       <button type="button" class="headC">
         <span class="fa fa-bars" title="MENU"></span>
