--- a/2018.06.14_tab.html
+++ b/2018.06.14_tab.html
@@ -36,12 +36,31 @@
             padding: 7px;
             color:#333;
         }
+        ul.menu li a.active{
+            background: #353d3e;
+            color: #fff;
+        }
+        ul.menu li a:not(.active){
+            opacity: 0.5;
+            transition: .8s;
+        }
+        .content {
+            font-size: 14px;
+            padding: 7px 10px;
+            line-height: 1.4;
+            background: #353d3e;
+            color: #fff;
+            min-height: 150px;
+        }
+        .content.active{
+            display: block;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <ul class="menu">
-            <li><a href="#">ABOUT</a></li>
+            <li><a href="#" class="active">ABOUT</a></li>
             <li><a href="#">SERVICE</a></li>
             <li><a href="#">CONTACT</a></li>
         </ul>
