--- a/2018.06.14_tab.html
+++ b/2018.06.14_tab.html
@@ -85,6 +85,14 @@
             menuItems[i].addEventListener('click',function(e){
                 e.preventDefault();
 
+                var i;
+
+                for(i=0; i < menuItems.length; i++){
+                    menuItems[i].className = 'menu_item';
+                }
+
+                this.className = 'menu_item active';
+
             });
         }
         
