--- a/2018.06.14_modal.html
+++ b/2018.06.14_modal.html
@@ -6,16 +6,19 @@
     <title>Modal Window</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/2018.06.14_modal.css">
-    <script src="main.js"></script>
+    <script src="JavaScript/2018.06.14_modal.js">
+    
+    
+    </script>
 </head>
 <body>
     <div id="open">
         Open Modal Window
     </div>
 
-    <div id="mask"></div>
+    <div id="mask" class="hidden"></div>
 
-    <div id="modal">
+    <div id="modal" class="hidden">
         <p>Hello</p>
         <div id="close">
             close
